--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.55</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>2.10.0</version>
+        </dependency>
     </dependencies>
 </project>
